--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
         <h1>Pokemon Matching game</h1>
         <h2>Time (in seconds): <span id="count-up"></span></h2>
         <h3 id="notification"></h3>
-        <div class="wrapper">
-        </div>
+        <div class="wrapper"></div>
         <div class="footer">
             <button type="button" id="start">start</button>
             <button type="button" id="reset">reset</button>
